# VirstualProfessorAssistant

./: CMakeLists.txt
include/: CMakeLists.txt  assistance.h  calification.h  course.h  databasestructs.h  dbhandler.h  evaluation.h  model.h  person.h  student.h
src/: CMakeLists.txt  assistance.cpp  calification.cpp  course.cpp  databasestructs.cpp  dbhandler.cpp  evaluation.cpp  main.cpp  model.cpp  person.cpp  student.cpp
src/Ui/: CMakeLists.txt  assistanceswidget.cpp  assistanceswidget.h  calificationswidget.cpp  calificationswidget.h  controllerview.cpp  controllerview.h  coursewidget.cpp  coursewidget.h  evaluationswidget.cpp  evaluationswidget.h  mainwidget.cpp  mainwidget.h  modifyassistance.cpp  modifyassistance.h  modifycalification.cpp  modifycalification.h  modifycoursee.cpp  modifycoursee.h  modifyevaluation.cpp  modifyevaluation.h  modifystudent.cpp  modifystudent.h  qlistcourseswidget.cpp  qlistcourseswidget.h  studentswidget.cpp  studentswidget.h
src/libs/: CMakeLists.txt
src/libs/dataBaseGenerator/: CMakeLists.txt  databasegenerator.cpp  databasegenerator.h
tests/: CMakeLists.txt
tests/bankcashier/: CMakeLists.txt  main.cpp  tester_bankcashier.cpp
tests/cajeroautomatico/: CMakeLists.txt  main.cpp  tester_cajeroautomatico.cpp
tests/course/: CMakeLists.txt  main.cpp  tester_cuenta.cpp
tests/dbhandler/: CMakeLists.txt  tester_dbhandler.cpp
tests/generatorDB/: CMakeLists.txt  README  calification.txt  course.txt  tester_generatordb.cpp
tests/model/: CMakeLists.txt  main.cpp  tester_model.cpp
tests/person/: CMakeLists.txt  main.cpp  tester_persona.cpp
tests/student/: CMakeLists.txt  tester_usuario.cpp
utilityAplication/: CMakeLists.txt
utilityAplication/generatorDB/: CMakeLists.txt  assistance.txt  evaluation.txt  main.cpp  persona.txt  relationSC.txt
